# aerarium-saturni

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: personal-planning-guidelines.md
.claude/10-portfolio-overview-dashboard/: 48-backend-aggregation-endpoint.md  49-portfolio-tab-shell.md  50-overview-table.md  initiative.md  planning.md  proposal.md  rfc.md
.claude/11-enable-transactions-edit/: 58-edit-and-delete-endpoints.md  59-edit-and-delete-ui.md  initiative.md  planning.md  proposal.md  rfc.md
.claude/12-holdings-data-ingestion/: 63-data-layer.md  64-api-layer.md  initiative.md  planning.md  proposal.md  rfc.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_etf_tables.py  002_alter_etf_holdings.py  003_alter_etf_holdings_add_ticker.py
backend/data/holdings/original/: EUNL.xlsx  LYP6.xlsx  VWCE.xlsx
backend/src/backend/: db.py  main.py  models.py
backend/src/backend/routers/: etfs.py  portfolio.py  transactions.py
backend/src/backend/schemas/: etfs.py  portfolio.py  transactions.py
backend/tests/: conftest.py
backend/tests/routers/: test_etfs.py  test_portfolio.py  test_transactions.py
backend/tests/schemas/: test_etf_holding_row.py
frontend/: .lighthouserc.js  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
the-codex/: .lighthouserc.js  Dockerfile  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.js
(+232 files in other folders)
